// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can access callback for advanced operations 1`] = `
<div>
  <div
    class="some-div"
  >
    hello
  </div>
  <button>
    foobar
  </button>
</div>
`;

exports[`can access callback for advanced operations 2`] = `
<div>
  <div
    class="some-div"
  >
    hello
  </div>
  <button>
    foo
  </button>
</div>
`;

exports[`can test components 1`] = `
<div>
  <div
    class="some-div"
  >
    hello
  </div>
  <button>
    foobar
  </button>
</div>
`;
